202 - Service, Ingress/01-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
  namespace: workshop-202
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
